--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+
+
+body {
+    font-family: "Rubik", sans-serif !important;
+    overflow-x: hidden;
+}
