--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,27 @@ body {
     font-family: "Rubik", sans-serif !important;
     overflow-x: hidden;
 }
+
+.input-div {
+    
+    position: relative;
+}
+
+.input-label span {
+    display: inline-block;
+    transition: transform 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.input-label {
+    position: absolute;
+    top: 10px;
+    left: 0;
+    color: gray;
+}
+.input-div input:focus + label span,
+.input-div input:not(:placeholder-shown) + label span{
+    transform: translateY(-30px) ;
+    color: black;
+}
+
+
